--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+    apiKey: "AIzaSyAu8XrpgoU4BD_xPWYHqgDw-b8_tJsJFXQ",
+    authDomain: "ficha-rpg-d4rk.firebaseapp.com",
+    projectId: "ficha-rpg-d4rk",
+    storageBucket: "ficha-rpg-d4rk.appspot.com",
+    messagingSenderId: "941524851935",
+    appId: "1:941524851935:web:abbee5bf32bb56897add6a"
+  };
+
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
